[package]
name = "gpui-grid"
version = "0.1.0"
edition = "2024"

[features]
# Enable this feature when using local fiber GPUI to display it in the overlay
fiber = []

[dependencies]
# Switch between upstream (git) and local fiber (path) by commenting/uncommenting:
# gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui = { path = "../zed/crates/gpui", package = "gpui_rn" }
log = "0.4"
env_logger = "0.11"
